--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Created by .ignore support plugin (hsz.mobi)
 .vscode/
 
+.direnv/
+
 ### Python template
 # Byte-compiled / optimized / DLL files
 __pycache__/
